<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>com.fnz.debezium.ibmi</groupId>
		<artifactId>debezium-connector-ibmi-parent</artifactId>
		<version>${revision}</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<artifactId>debezium-connector-ibmi</artifactId>
	<packaging>jar</packaging>

	<properties>
		<confluent.platform.version>7.3.0</confluent.platform.version>
		<kafka.version>3.3.1</kafka.version>
		<version.jetty>9.4.48.v20220622</version.jetty>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<repository.project>fnz-poa-development</repository.project>
		<changelist>-SNAPSHOT</changelist>
		<debezium.version>2.2.0.Final</debezium.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.debezium</groupId>
				<artifactId>debezium-parent</artifactId>
				<version>${debezium.version}</version>
	            <type>pom</type>
	            <scope>import</scope>				
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>com.fnz.debezium.ibmi</groupId>
			<artifactId>structured-logging</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fnz.kafka</groupId>
			<artifactId>kafka-smt-collection</artifactId>
			<version>${project.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fnz.debezium.ibmi</groupId>
			<artifactId>jt400-override-ccsid</artifactId>			
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- for java util logger -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jul</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- for java system logger -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jpl</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<scope>compile</scope>
		</dependency>
		<!-- For JSON logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-layout-template-json</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>


		<dependency>
			<groupId>com.fnz.debezium.ibmi</groupId>
			<artifactId>journal-parsing</artifactId>
			<version>${project.version}</version>
		</dependency>


		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>connect-api</artifactId>
		</dependency>


		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>core</artifactId>
			<version>4.3.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.abego.treelayout</groupId>
			<artifactId>org.abego.treelayout.core</artifactId>
			<version>1.0.1</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>stringtemplate</artifactId>
			<version>4.0.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-jmx</artifactId>
			<version>${version.jetty}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${version.jetty}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${version.jetty}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.confluent</groupId>
			<artifactId>common-config</artifactId>
			<version>${confluent.platform.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>connect-runtime</artifactId>
			<scope>runtime</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka_2.12</artifactId>
			<version>${kafka.version}</version>
		</dependency>

		<dependency>
			<groupId>io.confluent</groupId>
			<artifactId>kafka-connect-avro-converter</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>io.prometheus.jmx</groupId>
			<artifactId>jmx_prometheus_javaagent</artifactId>
			<version>0.16.1</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>io.confluent</groupId>
			<artifactId>kafka-schema-serializer</artifactId>
			<version>${confluent.platform.version}</version>
		</dependency>
		<dependency>
			<groupId>io.confluent</groupId>
			<artifactId>kafka-connect-protobuf-converter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.google.api.grpc</groupId>
					<artifactId>googleapis-common-protos</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- for securing REST API -->
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>connect-basic-auth-extension</artifactId>
			<version>${kafka.version}</version>
			<scope>runtime</scope>
		</dependency>


		<!-- for monitoring capture traces -->
		<dependency>
			<groupId>io.zipkin.contrib.brave</groupId>
			<artifactId>brave-kafka-interceptor</artifactId>
			<version>0.6.0</version>
			<scope>runtime</scope>
		</dependency>

		<!-- for checking health -->
		<dependency>
			<groupId>com.fnz.debezium.ibmi</groupId>
			<artifactId>connector-health</artifactId>
			<version>${project.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-embedded</artifactId>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-core</artifactId>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-embedded</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
			<version>3.5.13</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.artifactId}-${project.version}_${revision}</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.1.4</version>
				<configuration>
					<from>
						<image>eu.gcr.io/${repository.project}/openjdk17:latest</image>
					</from>
					<to>
						<image>eu.gcr.io/${repository.project}/debezium-connector-ibmi</image>
						<tags>
							<tag>${debezium.version}_${project.version}</tag>
							<tag>latest${changelist}</tag>
						</tags>
					</to>
					<container>
						<appRoot>/app</appRoot>
						<entrypoint>/app/entrypoint.sh</entrypoint>
						<ports>
							<port>8083</port>
							<port>7071</port>
						</ports>
						<labels>
							<maintainer>FNZ LTD</maintainer>
						</labels>
						<environment>
							<REST_PORT>8083</REST_PORT>
						</environment>

						<format>OCI</format>
					</container>
					<extraDirectories>
						<paths>
							<path>
								<from>src/main/resources/docker/shell</from>
								<into>/app</into>
							</path>
							<path>
								<from>src/main/resources/docker/config</from>
								<into>/app</into>
							</path>
						</paths>
						<permissions>
							<permission>
								<file>/app/entrypoint.sh</file>
								<mode>755</mode>
							</permission>
							<permission>
								<file>/app/entrypoint-debug.sh</file>
								<mode>755</mode>
							</permission>							
							<permission>
								<file>/app/</file>
								<mode>755</mode>
							</permission>
						</permissions>
					</extraDirectories>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- disable parent version checks -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<!-- This defines the ${parsedVersion.*} properties used in the Revapi 
								config. -->
							<goal>parse-version</goal>
						</goals>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-java-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>install-file</goal>
						</goals>
						<phase>install</phase>
						<configuration>
							<file>target/${project.build.finalName}.${project.packaging}</file>
							<generatePom>true</generatePom>
							<pomFile>pom.xml</pomFile>
							<version>${debezium.version}_${project.version}</version>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<build>${project.build.finalName}</build>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
